--- a/packages/pdfator-core/tsconfig.json
+++ b/packages/pdfator-core/tsconfig.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
-    "sourceMap": true,
     "baseUrl": ".",
-    "target": "es5",
+    "declaration": true,
+    "inlineSources": true,
     "lib": ["es2017"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
-    "outDir": "dist",
-    "strictNullChecks": true,
+    "noStrictGenericChecks": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noStrictGenericChecks": true,
+    "outDir": "dist",
     "skipLibCheck": true,
-    "allowJs": true
+    "sourceMap": true,
+    "strictNullChecks": true,
+    "target": "es5"
   },
   "include": ["lib/**/*"],
   "files": ["./lib/index.ts"]
