--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,9 @@
 {
   "lerna": "2.11.0",
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/pdfator-core",
+    "packages/pdfator-cli",
+    "packages/pdfator-serverless"
+  ],
   "version": "0.0.0"
 }
