--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "scripts": {
     "boostrap": "lerna bootstrap --hoist",
+    "build:core": "lerna run build --scope='@pdfator/core'",
+    "build:serverless": "lerna run build --scope='@pdfator/serverless'",
+    "package:serverless": "lerna run package --scope='@pdfator/serverless'",
+    "deploy:serverless": "lerna run deploy --scope='@pdfator/serverless'",
     "build": "lerna run build"
   },
   "devDependencies": {
-    "@types/node": "^9.6.22",
-    "@types/puppeteer": "^1.3.4",
-    "awesome-typescript-loader": "^5.0.0",
-    "jest": "^22.4.4",
+    "awesome-typescript-loader": "^5.2.0",
     "lerna": "^2.11.0",
     "prettier": "^1.13.5",
     "tslint-config-prettier": "^1.13.0",
@@ -15,5 +16,6 @@
     "typescript": "^2.9.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8"
-  }
+  },
+  "dependencies": {}
 }
