--- a/packages/pdfator-cli/package.json
+++ b/packages/pdfator-cli/package.json
@@ -14,12 +14,13 @@
   },
   "devDependencies": {
     "@pdfator/core": "1.2.0",
-    "puppeteer": "1.5.0",
+    "puppeteer": "^1.5.0",
+    "unzipper": "^0.9.2",
     "chalk": "^2.4.1",
     "clear": "^0.1.0",
     "clui": "^0.3.6",
     "figlet": "^1.2.0",
-    "inquirer": "^5.2.0",
+    "inquirer": "^6.0.0",
     "minimist": "^1.2.0"
   },
   "jest": {
