--- a/packages/pdfator-core/package.json
+++ b/packages/pdfator-core/package.json
@@ -3,13 +3,26 @@
   "version": "1.2.0",
   "description": "",
   "main": "dist/index.js",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:kepennar/pdfator.git"
+  },
   "scripts": {
     "build": "rm -rf dist && mkdir dist && webpack --mode=production",
     "build:watch": "webpack -w --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "puppeteer": "^1.5.0"
+  "peerDependencies": {
+    "puppeteer": "^1.5.0",
+    "unzipper": "^0.9.2"
+  },
+  "devDependencies": {
+    "@types/node": "^10.3.5",
+    "@types/puppeteer": "^1.3.4",
+    "@types/unzipper": "^0.8.4",
+    "puppeteer": "^1.5.0",
+    "unzipper": "^0.9.2"
   },
   "jest": {
     "projects": [
@@ -24,10 +37,5 @@
       "/test/"
     ],
     "collectCoverage": true
-  },
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:kepennar/pdfator.git"
   }
 }
