--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "pdfator",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "bin": {
-    "pdfator": "./index.js"
-  },
-  "directories": {
-    "lib": "lib"
-  },
-  "dependencies": {
-    "chalk": "^2.3.2",
-    "clear": "^0.1.0",
-    "clui": "^0.3.6",
-    "figlet": "^1.2.0",
-    "inquirer": "^5.2.0",
-    "minimist": "^1.2.0",
-    "puppeteer": "^1.2.0"
-  },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "boostrap": "lerna bootstrap --hoist",
+    "build:core": "lerna run build --scope='@pdfator/core'",
+    "build:serverless": "lerna run build --scope='@pdfator/serverless'",
+    "package:serverless": "lerna run package --scope='@pdfator/serverless'",
+    "deploy:serverless": "lerna run deploy --scope='@pdfator/serverless'",
+    "build": "lerna run build"
   },
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "awesome-typescript-loader": "^5.2.0",
+    "lerna": "^2.11.0",
+    "prettier": "^1.13.5",
+    "tslint-config-prettier": "^1.13.0",
+    "tslint-config-standard": "^7.0.0",
+    "typescript": "^2.9.2",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8"
+  },
+  "dependencies": {}
 }
