--- a/packages/pdfator-front/package.json
+++ b/packages/pdfator-front/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "file-saver": "^1.3.8",
     "vue": "^2.5.16"
   },
   "devDependencies": {
