--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build:serverless": "lerna run build --scope='@pdfator/serverless'",
     "package:serverless": "lerna run package --scope='@pdfator/serverless'",
     "deploy:serverless": "lerna run deploy --scope='@pdfator/serverless'",
-    "build": "lerna run build"
+    "build:all": "npm run build:core && npm run build:serverless"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.0",
