--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,18 +17,18 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "packages/pdfator-core/package.json" }}-{{ checksum "packages/pdfator-cli/package.json" }}-{{ checksum "packages/pdfator-serverless/package.json" }}
+          - v1-dependencies-{{ checksum "package.json" }}-{{ checksum "packages/pdfator-core/package.json" }}-{{ checksum "packages/pdfator-cli/package.json" }}-{{ checksum "packages/pdfator-serverless/package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: npm ci
+      - run: npm install
 
       - save_cache:
           paths:
             - packages/pdfator-core/node_modules
             - packages/pdfator-cli/node_modules
             - packages/pdfator-serverless/node_modules
-          key: v1-dependencies-{{ checksum "packages/pdfator-core/package.json" }}-{{ checksum "packages/pdfator-cli/package.json" }}-{{ checksum "packages/pdfator-serverless/package.json" }}
+          key: v1-dependencies-{{ checksum "package.json" }}-{{ checksum "packages/pdfator-core/package.json" }}-{{ checksum "packages/pdfator-cli/package.json" }}-{{ checksum "packages/pdfator-serverless/package.json" }}
       
       # Bootstrap Lerna  
       - run: npm run boostrap
