--- a/packages/pdfator-front/package.json
+++ b/packages/pdfator-front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "file-saver": "^1.3.8",
+    "normalize.css": "^8.0.0",
     "vue": "^2.5.16"
   },
   "devDependencies": {
