--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "build:front": "lerna run build --scope='@pdfator/front'",
     "package:serverless": "lerna run package --scope='@pdfator/serverless'",
     "deploy:serverless": "lerna run deploy --scope='@pdfator/serverless'",
-    "build:all": "npm run build:core && npm run build:serverless"
+    "build:all": "npm run build:core && npm run build:serverless",
+    "publish": "lerna publish --npm-tag next"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.0",
-    "lerna": "^2.11.0",
+    "lerna": "^3.0.0",
     "prettier": "^1.13.5",
     "tslint-config-prettier": "^1.13.0",
     "tslint-config-standard": "^7.0.0",
