--- a/packages/pdfator-core/package.json
+++ b/packages/pdfator-core/package.json
@@ -2,6 +2,7 @@
   "name": "@pdfator/core",
   "version": "1.2.0",
   "description": "",
+  "private": true,
   "main": "dist/index.js",
   "license": "ISC",
   "repository": {
@@ -14,7 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
-    "puppeteer": "^1.5.0",
+    "puppeteer": "^1.7.0",
     "unzipper": "^0.9.2"
   },
   "devDependencies": {
