--- a/packages/pdfator-serverless/package.json
+++ b/packages/pdfator-serverless/package.json
@@ -2,6 +2,7 @@
   "name": "@pdfator/serverless",
   "version": "1.0.2",
   "description": "",
+  "private": true,
   "main": "dist/index.js",
   "directories": {
     "lib": "lib"
@@ -17,7 +18,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "puppeteer": "^1.5.0",
+    "puppeteer": "^1.7.0",
     "sha1": "^1.1.1",
     "unzipper": "^0.9.2"
   },
