--- a/packages/pdfator-core/package.json
+++ b/packages/pdfator-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfator/core",
-  "version": "1.2.0",
+  "version": "0.0.1-1.3.0.0",
   "description": "",
   "private": true,
   "main": "dist/index.js",
