--- a/packages/pdfator-front/package.json
+++ b/packages/pdfator-front/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfator/front",
-  "version": "0.1.0",
+  "version": "0.0.1-1.3.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
