--- a/packages/pdfator-serverless/package.json
+++ b/packages/pdfator-serverless/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfator/serverless",
-  "version": "1.0.2",
+  "version": "0.0.1-1.3.0.0",
   "description": "",
   "private": true,
   "main": "dist/index.js",
@@ -23,7 +23,7 @@
     "unzipper": "^0.9.2"
   },
   "devDependencies": {
-    "@pdfator/core": "1.2.0",
+    "@pdfator/core": "^0.0.1-1.3.0.0",
     "@types/aws-lambda": "^8.10.7",
     "@types/inquirer": "0.0.41",
     "@types/node": "^9.6.22",
