--- a/packages/pdfator-cli/package.json
+++ b/packages/pdfator-cli/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@pdfator/cli",
-  "version": "0.0.1-1.3.0.1",
+  "version": "0.0.1-1.3.0.2",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "lib/index.js",
   "bin": {
     "pdfator": "./lib/index.js"
@@ -13,7 +16,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@pdfator/core": "^0.0.1-1.3.0.1",
+    "@pdfator/core": "^0.0.1-1.3.0.2",
     "chalk": "^2.4.1",
     "clear": "^0.1.0",
     "clui": "^0.3.6",
@@ -41,5 +44,6 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:kepennar/pdfator.git"
-  }
+  },
+  "gitHead": "49ec0ada9e66ed811f0eb21ae35def966fd9ee6b"
 }
