--- a/packages/pdfator-cli/package.json
+++ b/packages/pdfator-cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@pdfator/cli",
-  "version": "0.0.1-1.3.0.2",
+  "name": "pdfator",
+  "version": "0.0.1-1.3.0.3",
   "description": "",
   "publishConfig": {
     "access": "public"
@@ -16,7 +16,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@pdfator/core": "^0.0.1-1.3.0.2",
+    "@pdfator/core": "^0.0.1-1.3.0.3",
     "chalk": "^2.4.1",
     "clear": "^0.1.0",
     "clui": "^0.3.6",
@@ -45,5 +45,5 @@
     "type": "git",
     "url": "git@github.com:kepennar/pdfator.git"
   },
-  "gitHead": "49ec0ada9e66ed811f0eb21ae35def966fd9ee6b"
+  "gitHead": "4e124db71531bc62d1231b92274d6cb392aab814"
 }
