--- a/packages/pdfator-serverless/package.json
+++ b/packages/pdfator-serverless/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@pdfator/serverless",
-  "version": "1.0.2",
+  "version": "1.7.5",
   "description": "",
+  "private": true,
   "main": "dist/index.js",
   "directories": {
     "lib": "lib"
@@ -17,12 +18,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "puppeteer": "^1.5.0",
+    "puppeteer": "^1.7.0",
     "sha1": "^1.1.1",
     "unzipper": "^0.9.2"
   },
   "devDependencies": {
-    "@pdfator/core": "1.2.0",
+    "@pdfator/core": "^1.7.5",
     "@types/aws-lambda": "^8.10.7",
     "@types/inquirer": "0.0.41",
     "@types/node": "^9.6.22",
