--- a/packages/pdfator-serverless/serverless.yml
+++ b/packages/pdfator-serverless/serverless.yml
@@ -1,4 +1,4 @@
-service: pdfator 
+service: pdfator
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
@@ -15,7 +15,7 @@ provider:
     - Effect: Allow
       Action:
         - s3:PutObject
-      Resource: "arn:aws:s3:::${self:custom.bucket}/*"
+      Resource: 'arn:aws:s3:::${self:custom.bucket}/*'
 
 package:
   artifact: ./package.zip
@@ -29,31 +29,37 @@ functions:
           method: get
           cors: true
     environment:
-      LOCAL_CHROME: "true"
-      DEBUG: "true"
+      LOCAL_CHROME: 'true'
+      DEBUG: 'true'
       BUCKET: ${self:custom.bucket}
+      S3_PREFIX: ${self:custom.s3Prefix}
 
 resources:
   Resources:
-    ServerlesslyRedirectS3Bucket:
+    PdfatorScreens:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:custom.bucket}
         AccessControl: PublicRead
-        WebsiteConfiguration:
-          IndexDocument: index.html
-    ServerlesslyRedirectS3BucketPolicy:
+        LifecycleConfiguration:
+          Rules:
+            - Id: ScreenExpiration
+              Prefix: ${self:custom.s3Prefix}
+              Status: Enabled
+              ExpirationInDays: 1
+
+    PdfatorScreensPolicy:
       Type: AWS::S3::BucketPolicy
       Properties:
         Bucket: ${self:custom.bucket}
         PolicyDocument:
           Statement:
-          - Action:
-            - s3:GetObject
-            Effect: Allow
-            Resource:
-            - arn:aws:s3:::${self:custom.bucket}/*
-            Principal: "*"
+            - Action:
+                - s3:GetObject
+              Effect: Allow
+              Resource:
+                - arn:aws:s3:::${self:custom.bucket}/*
+              Principal: '*'
 
 plugins:
   - serverless-hooks-plugin
@@ -65,4 +71,4 @@ custom:
   bucket: pdfator-screens
   region: eu-west-3
   stage: test
-
+  s3Prefix: screen-
