--- a/packages/pdfator-core/package.json
+++ b/packages/pdfator-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfator/core",
-  "version": "1.7.8",
+  "version": "1.7.9",
   "description": "",
   "main": "dist/index.js",
   "license": "ISC",
@@ -18,14 +18,14 @@
   },
   "peerDependencies": {
     "puppeteer": "^1.7.0",
-    "unzipper": "^0.9.2"
+    "yauzl": "^2.10.0"
   },
   "devDependencies": {
     "@types/node": "^10.3.5",
     "@types/puppeteer": "^1.3.4",
-    "@types/unzipper": "^0.8.4",
+    "@types/yauzl": "^2.9.0",
     "puppeteer": "^1.7.0",
-    "unzipper": "^0.9.2"
+    "yauzl": "^2.10.0"
   },
   "jest": {
     "projects": [
