--- a/packages/pdfator-serverless/package.json
+++ b/packages/pdfator-serverless/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfator/serverless",
-  "version": "1.7.8",
+  "version": "1.7.9",
   "description": "",
   "private": true,
   "main": "dist/index.js",
@@ -20,10 +20,10 @@
   "dependencies": {
     "puppeteer": "^1.7.0",
     "sha1": "^1.1.1",
-    "unzipper": "^0.9.2"
+    "yauzl": "^2.10.0"
   },
   "devDependencies": {
-    "@pdfator/core": "^1.7.8",
+    "@pdfator/core": "^1.7.9",
     "@types/aws-lambda": "^8.10.7",
     "@types/inquirer": "0.0.41",
     "@types/node": "^9.6.22",
