Feat(front): convertion options (#26)
* pdfator-front: layout wip

* optimized svg

* rename & reuse of svg

* spliting the content component, axios wip

* fix review

* first working version

* css polish

* Animate

* disable outline on url field

* layout - adding format and size options

* adding options format & size

* fixing the extra whitespace at the end of the page

* adding pdfator namespace to the app components

* fixing floating label

* csspolish-reducing urlfield height

* design :nail_care:

* Review : Remove spinner.svg file

--- a/packages/pdfator-front/package.json
+++ b/packages/pdfator-front/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run lint && npm run build",
+    "deploy": "firebase deploy"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -17,6 +19,8 @@
     "@vue/cli-plugin-babel": "^3.0.0-rc.12",
     "@vue/cli-plugin-eslint": "^3.0.0-rc.12",
     "@vue/cli-service": "^3.0.0-rc.12",
+    "firebase-tools": "^4.0.3",
+    "prettier": "^1.14.2",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
