--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,11 @@
 {
-  "lerna": "2.11.0",
+  "npmClient": "yarn",
+  "useWorkspaces": true,
   "packages": [
     "packages/pdfator-cli",
     "packages/pdfator-core",
     "packages/pdfator-front",
     "packages/pdfator-serverless"
   ],
-  "nohoist": [
-    "normalize.css*"
-  ],
-  "version": "1.7.8"
+  "version": "1.8.0"
 }
