--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
+  "private": true,
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "normalize.css*"
+    ]
+  },
   "scripts": {
-    "boostrap": "lerna bootstrap --hoist",
+    "bootstrap": "lerna bootstrap",
     "build:core": "lerna run build --scope='@pdfator/core'",
     "build:serverless": "lerna run build --scope='@pdfator/serverless'",
     "build:front": "lerna run build --scope='@pdfator/front'",
     "package:serverless": "lerna run package --scope='@pdfator/serverless'",
     "deploy:serverless": "lerna run deploy --scope='@pdfator/serverless'",
-    "build:all": "npm run build:core && npm run build:serverless",
-    "publish": "npm run build:core && lerna publish"
+    "build:all": "yarn run build:core && yarn run build:serverless",
+    "publish": "yarn run build:core && lerna publish"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.0",
-    "lerna": "^2.11.0",
-    "prettier": "^1.13.5",
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.9.2",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8"
+    "ts-loader": "^8.0.4",
+    "lerna": "^3.22.0",
+    "prettier": "^2.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^9.0.0",
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {}
 }
