--- a/packages/pdfator-core/tsconfig.json
+++ b/packages/pdfator-core/tsconfig.json
@@ -14,7 +14,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strictNullChecks": true,
-    "target": "es5"
+    "target": "ES2020"
   },
   "include": ["lib/**/*"],
   "files": ["./lib/index.ts"]
