--- a/packages/pdfator-serverless/package.json
+++ b/packages/pdfator-serverless/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pdfator/serverless",
-  "version": "1.7.8",
+  "version": "1.8.0",
   "description": "",
   "private": true,
   "main": "dist/index.js",
@@ -8,37 +8,32 @@
     "lib": "lib"
   },
   "scripts": {
-    "build": "rm -rf dist && mkdir dist && webpack --mode=production",
-    "build:dev": "webpack --mode=development",
-    "build:watch": "webpack -w --mode=development",
-    "install-dep:prod": "cp package.json dist && PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=1 npm install --prefix dist --production ",
-    "package:prepare": "npm run build &&  npm run install-dep:prod && cp -r node_modules dist/",
-    "package": "npm run package:prepare && cp chrome/headless-chromium.zip dist && cd dist && zip -rq ../package.zip .",
+    "build": "rm -rf dist && mkdir dist && yarn package",
+    "package": "ncc build lib/index.ts -o dist && cp package.json dist && cd dist && zip -rq ../package.zip .",
     "deploy": "serverless deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "chrome-aws-lambda": "^5.3.1",
     "puppeteer": "^1.7.0",
     "sha1": "^1.1.1",
     "unzipper": "^0.9.2"
   },
   "devDependencies": {
-    "@pdfator/core": "^1.7.8",
+    "@pdfator/core": "^1.8.0",
     "@types/aws-lambda": "^8.10.7",
     "@types/inquirer": "0.0.41",
     "@types/node": "^9.6.22",
-    "@types/puppeteer": "^1.3.4",
+    "@types/puppeteer": "^3.0.2",
     "@types/sha1": "^1.1.1",
-    "awesome-typescript-loader": "^5.0.0",
-    "aws-sdk": "^2.270.1",
+    "@vercel/ncc": "0.24.1",
+    "aws-sdk": "^2.766.0",
     "jest": "^22.4.4",
-    "prettier": "^1.13.5",
-    "serverless": "^1.28.0",
+    "prettier": "^2.1.2",
+    "serverless": "^2.4.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.9.2",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8"
+    "typescript": "^4.0.3"
   },
   "license": "ISC",
   "repository": {
