--- a/packages/pdfator-serverless/tsconfig.json
+++ b/packages/pdfator-serverless/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
     "target": "es5",
