--- a/packages/pdfator-front/package.json
+++ b/packages/pdfator-front/package.json
@@ -6,22 +6,35 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "predeploy": "npm run lint && npm run build",
-    "deploy": "firebase deploy"
+    "deploy": "firebase deploy",
+    "predeploy": "yarn run lint && yarn run build"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "core-js": "^3.6.5",
     "file-saver": "^1.3.8",
     "normalize.css": "^8.0.0",
-    "vue": "^2.5.16"
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
+    "vue": "^3.0.0-0",
+    "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.12",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.12",
-    "@vue/cli-service": "^3.0.0-rc.12",
+    "@types/file-saver": "^2.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0-0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0-0",
     "firebase-tools": "^4.0.3",
     "prettier": "^1.14.2",
-    "vue-template-compiler": "^2.5.16"
+    "typescript": "~4.0.3"
   },
   "eslintConfig": {
     "root": true,
@@ -29,22 +42,18 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+      "plugin:vue/vue3-essential",
+      "eslint:recommended",
+      "@vue/typescript"
     ],
     "rules": {},
     "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
+      "parser": "@typescript-eslint/parser"
     }
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "not dead"
   ]
 }
